Add needed modules for use of unsafe by aeron